# pydoku

./: .pre-commit-config.yaml  README.md  puzzles.py  pydoku.py  pyproject.toml  requirements.txt  test_pydoku.py
dev/checks/: pyright  ruff-check  ruff-format  ruff-imports
src/: pydoku.py  test_pydoku.py
